fix: options z-index changed from behind of images to front.

--- a/nextjs-dashboard/src/app/ui/header.module.css
+++ b/nextjs-dashboard/src/app/ui/header.module.css
@@ -15,6 +15,7 @@
     justify-content: center;
     left: 0;
     right: 0;
+    z-index: 100000000;
 }
 
 .links {
